fix: using application/json instead mpfd on API
